--- a/.github/workflows/add-packages.yaml
+++ b/.github/workflows/add-packages.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          Rscript -e 'install.packages(c("gh", "purrr", "dplyr"))'
+          Rscript -e 'install.packages(c("gh", "purrr", "dplyr", "jsonlite"))'
 
       - name: Add new R packages to packages.json
         run: |
